--- a/slwp/website/login.html
+++ b/slwp/website/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- file:///Users/timo/src/slwp/website/login.html -->
 <html>
 	<head>
 		<title>Login 32-bit implementation</title>
@@ -8,29 +9,6 @@
 		<script src="sha256.js" type="text/javascript"></script>
 		<script src="keyring.js" type="text/javascript"></script>
 		<script>
-			function Uh(KeyringID, UID)
-			{
-				var H0 = SHA256(String(KeyringID));		// A 256 bit value represented as a 64 bytes string.
-				var H1 = SHA256(UID + window.top.location.hostname);
-														// Another 256 bit value represented as a 64 bytes string.
-				var Uh = "";
-				for (i=0; i < 8; i++)					// For each 8 bytes of H1 and H2: XOR both and add the result as string to Uh.
-					Uh += Hex32((parseInt(H0.substr(i * 8, 8), 16) ^ (parseInt(H1.substr(i * 8, 8), 16))) >>> 0);
-				return Uh;								// Also a 256 bit value represented as a 64 bytes string.
-			}
-			function StartLogin(keynum)
-			{
-				var random = Xorshift03().uint32;		// Generate 32-bit random numbers using Xorshift algorithm.
-				var Ru = random();
-				sessionStorage.k = keynum;
-				document.forms['login']['Au'].value = XorKu(Ru, keynum);
-				document.forms['login']['Uh'].value = Uh(Key(0), document.forms['login']['ID'].value);
-				sessionStorage.Ru = Ru >>> 0;
-				sessionStorage.Bu = parseInt(SHA256(sessionStorage.Ru).substr(-8), 16) >>> 0;
-				sessionStorage.j = Number(0);
-				document.forms['login'].action = 'login2.php'
-				document.forms['login'].submit();
-			}
 			function NewAccount(keynum)
 			{
 				sessionStorage.k = keynum;
@@ -90,6 +68,7 @@
 		<img src="XORkey logo RGB.png" height=150px>
 		<h1>Secure Login without Passwords</h1>
 			<input id="k"  name="k"  type="password" hidden>
+			<output id='showUh' name='showUh'></output>
 		<form name="login" method="post">
 			<input id="Uh" name="Uh" type="password" hidden>
 			<input id="Au" name="Au" type="password" hidden>
@@ -107,7 +86,7 @@
 		<div class=text>
 			<label for='keys'>Keys</label>
 			<input id='show' type=button value="Show" onClick="ToggleKeys('show');">
-			<output id="keys">No keys in localStorage.</output>
+			<output id='keys' name='keys'>No keys in localStorage.</output>
 		</div>
 		<script>
 			function handleFileSelect(evt) {
