--- a/slwp/website/login.html
+++ b/slwp/website/login.html
@@ -5,10 +5,10 @@
 		<title>Login 32-bit implementation</title>
 		<meta charset="utf-8">
 		<link href="style/login.css" type="text/css" rel="stylesheet" />
-		<script src="XORshift.js" type="text/javascript"></script>
+<!--		<script src="XORshift.js" type="text/javascript"></script>
 		<script src="sha256.js" type="text/javascript"></script>
 		<script src="keyring.js" type="text/javascript"></script>
-		<script>
+-->		<script>
 			function NewAccount(keynum)
 			{
 				sessionStorage.k = keynum;
@@ -18,64 +18,22 @@
 				document.forms['login'].submit();
 			}
 		</script>
-		<script>
-			function ClearLocalStorage()
-			{
-				localStorage.clear()
-				document.forms['login']['ID'].value = '';
-				document.getElementById('keys').value = 'No keys in localStorage.';
-			}
-			function ClearDefaultUserID()
-			{
-				localStorage.slwp_default_userid = document.forms['login']['ID'].value = '';
-			}
-			function SetDefaultUserID()
-			{
-				localStorage.slwp_default_userid = document.forms['login']['ID'].value;
-			}
-			function ToggleHidden(field, button)
-			{
-				var f = document.getElementById(field);
-				var b = document.getElementById(button);
-				if (f.type == 'password')
-				{
-					f.type = 'text';
-					b.value = 'Hide';
-				}
-				else
-				{
-					f.type = 'password';
-					b.value = 'Unhide';
-				}
-			}
-			function ToggleKeys(button)
-			{
-				var b = document.getElementById(button);
-				if (b.value == 'Show')
-				{
-					document.getElementById('keys').value = localStorage.Z;
-					b.value = 'Hide';
-				}
-				else
-				{
-					document.getElementById('keys').value = 'Keys loaded in localStorage.';
-					b.value = 'Show';
-				}
-			}
-		</script>
 	</head>
 	<body>
-		<img src="XORkey logo RGB.png" height=150px>
+		<img src='XORkey logo RGB.png' height='150px'>
 		<h1>Secure Login without Passwords</h1>
-			<input id="k"  name="k"  type="password" hidden>
+			<input id='k'  name='k'  type='password' hidden>
 			<output id='showUh' name='showUh'></output>
-		<form name="login" method="post">
-			<input id="Uh" name="Uh" type="password" hidden>
-			<input id="Au" name="Au" type="password" hidden>
-			<input id="Kd" name="Kd" type="password" hidden>
+		<form name='new_account' method='post' action='new_account.php'>
+			<input id='Uh' name='Uh' type='password' hidden>
+			<input id='Kd' name='Kd' type='password' hidden>
+		</form>
+		<form name='login' method='post' action='login2.php'>
+			<input id='Uh' name='Uh' type='password' hidden>
+			<input id='Au' name='Au' type='password' hidden>
 			<div class=text>
-				<label for="ID">UserID</label><input id="ID" name="ID" type="password" placeholder='Give UserID' >
-				<input id=jeckal type=button value=Unhide onclick="ToggleHidden('ID', 'jeckal');">
+				<label for='ID'>UserID</label><input id='ID' name='ID' type='password' placeholder='Give UserID' >
+				<input id=jeckal type=button value=Unhide onclick='ToggleHidden('ID', 'jeckal');'>
 				<input id="default_userid" type=button value="Set as default" onClick="SetDefaultUserID();">
 				<input type=button value="Clear default UserID" onclick="ClearDefaultUserID(); ">
 			</div>
