--- a/slwp/website/login.html
+++ b/slwp/website/login.html
@@ -5,19 +5,6 @@
 		<title>Login 32-bit implementation</title>
 		<meta charset="utf-8">
 		<link href="style/login.css" type="text/css" rel="stylesheet" />
-<!--		<script src="XORshift.js" type="text/javascript"></script>
-		<script src="sha256.js" type="text/javascript"></script>
-		<script src="keyring.js" type="text/javascript"></script>
--->		<script>
-			function NewAccount(keynum)
-			{
-				sessionStorage.k = keynum;
-				document.forms['login']['Kd'].value = Key(keynum);
-				document.forms['login']['Uh'].value = Uh(Key(0), document.forms['login']['ID'].value);
-				document.forms['login'].action = 'new_account.php'
-				document.forms['login'].submit();
-			}
-		</script>
 	</head>
 	<body>
 		<img src='XORkey logo RGB.png' height='150px'>
@@ -25,64 +12,12 @@
 			<input id='k'  name='k'  type='password' hidden>
 			<output id='showUh' name='showUh'></output>
 		<form name='new_account' method='post' action='new_account.php'>
-			<input id='Uh' name='Uh' type='password' hidden>
-			<input id='Kd' name='Kd' type='password' hidden>
+			<input id='Uh' name='Uh' hidden>
+			<input id='Kd' name='Kd' hidden>
 		</form>
 		<form name='login' method='post' action='login2.php'>
-			<input id='Uh' name='Uh' type='password' hidden>
-			<input id='Au' name='Au' type='password' hidden>
-			<div class=text>
-				<label for='ID'>UserID</label><input id='ID' name='ID' type='password' placeholder='Give UserID' >
-				<input id=jeckal type=button value=Unhide onclick='ToggleHidden('ID', 'jeckal');'>
-				<input id="default_userid" type=button value="Set as default" onClick="SetDefaultUserID();">
-				<input type=button value="Clear default UserID" onclick="ClearDefaultUserID(); ">
-			</div>
+			<input id='Uh' name='Uh' hidden>
+			<input id='Au' name='Au' hidden>
 		</form>
-		<div class=text>
-			<label for='keyring'>Key Ring</label><input id="keyring" type="file">
-		</div>
-		<div class=text>
-			<label for='keys'>Keys</label>
-			<input id='show' type=button value="Show" onClick="ToggleKeys('show');">
-			<output id='keys' name='keys'>No keys in localStorage.</output>
-		</div>
-		<script>
-			function handleFileSelect(evt) {
-				var files = evt.target.files; // FileList object
-
-				for (var i = 0, f; f = files[i]; i++) {
-					var reader = new FileReader();
-					reader.onload = (function(theFile) {
-						return function(e) {
-							var lines = reader.result.toString().split('\n');
-							var key_ring = new Array();
-							for (var l in lines)
-							{
-								if (lines[l].length > 0)
-									key_ring.push(lines[l]);
-							}
-							localStorage.setItem("Z", key_ring.join(";"));
-						};
-					})(f);
-					reader.readAsText(f);
-				}
-				document.getElementById("keys").value = "Keys loaded in localStorage.";
-			}
-			document.getElementById('keyring').addEventListener('change', handleFileSelect, false);
-		</script>
-		<br>
-		<input type=button value="Clear local Storage" onclick="ClearLocalStorage();">
-		<script>
-			if (localStorage.slwp_default_userid != undefined)
-				document.getElementById("ID").value = localStorage.slwp_default_userid;
-			if (localStorage.Z != undefined)
-				document.getElementById("keys").value = "Keys loaded in localStorage.";
-		</script>
-		<hr>
-		<input id=slwp type=button value="Login with Keypad" onClick="DisplayKeys(true, 'slwpkeypad', 'StartLogin')">
-		<input id=slwp type=button value="New Login" onClick="DisplayKeys(false, 'slwpkeypad', 'NewAccount')">
-		<div class=keypad>
-			<output id=slwpkeypad></output>
-		</div>
 	</body>
 </html>
