Added advantages and disadvantages of SLWP.

--- a/xorkey.com/index.html
+++ b/xorkey.com/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>XORkey 0</title>
+		<title>XORkey SLWP</title>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
 		<div id='wrapper'>
 			<div id='top'>
 				<ul>
-					<li>XORkey</li>
+					<li>SLWP</li>
 					<li><a href='index.html'>Home</a></li>
 					<div class='centered' style='z-index: -1;'><h1>Title</h1></div>
 					<li class='dropdown-right'><img class='companylogo' src='img/logo/XORkeyLogo32.png'>
@@ -29,7 +29,7 @@
 			</div>	<!-- #top -->
 			<div id='left'>
 				<div id='companygroup'>
-					<div class='companygroup'>The key to the Internet</div>
+					<div class='companygroup'>XORkey</div>
 				</div>	<!-- #companygroup -->
 			</div>	<!-- #left -->
 			<div id='right'>
@@ -46,6 +46,39 @@
 					</header>
 					<p>	XORkey introduces: Secure Login Without Passwords, an authentication method that does away with passwords.</p>
 					<p>	Download a <a href='documents/white-papers/timo.pdf'>white-paper</a> describing the TIMO™ protocol, which is at the heart of the authentication method.</p>
+				</section>
+				<section>
+					<header>
+						<h2>Advantages</h2>
+					</header>
+					<p>This way of logging in has the following benefits.
+					<ul>
+					<li>Obviously, there are no passwords any more for sites that adopt SLWP.<br>
+						<i>So, there are no dozens of them for you to remember.</i>
+					<li>No centrally stored passwords that can be stolen by the millions, including yours.<br>
+						<i>Instead, the keys that are centrally stored are useless for logging in from a client.</i>
+					<li>The website needs to prove it can decrypt your encrypted random number.<br>
+						<i>A phishing site is unable to do so, thus eliminating this threat.</i>
+					<li>It is a two-factor authentication method by design and easily upgraded to multi-factor authentication.<br>
+						<i>A combination of something you know, and/or something you have, and/or something you are. Just add hardware tokens and biometrics for one or more persons to make it multi-factor.</i>
+					<li>Logging in can be fully automated.<br>
+						<i>Just hit the login button on the website and you're in.</i>
+					<li>You can pick just any username you want for any and all accounts you have; no clashes with other people's accounts.<br>
+						<i>"That account is already taken" is a thing from the past.</i>
+					<li>Accounts cannot be linked by colluding websites to the same person.<br>
+						<i>Your anonimity is protected, unless you leave your name...</i>
+					<li>Login keys are automatically and periodically changed.<br>
+						<i>You are not aware of rekeying but will enhance security.</i>
+					</ul>
+					<header>
+						<h2>Disadvantages</h2>
+					</header>
+					<p>Surely, there are disadvantages.</p>
+					<ul>
+					<li>You have to have your keys, otherwise you are not able to login.</br>
+						<i>Not in a million years.</i>
+					</ul>
+					<p style='font-size: 80%'>And don't call me Shirley!</p>
 				</section>
 			</div>	<!-- #content -->
 		</div>	<!-- #wrapper -->
