Reordered the whole site, DNS style: com/xorkey/www/shtml.

--- a/com/xorkey/www/shtml/inc/top.html
+++ b/com/xorkey/www/shtml/inc/top.html
@@ -1,6 +1,7 @@
 				<ul>
-					<li>XORkey</li>
-					<li><a href='index.php'>Home</a></li>
+					<li>XORkey SLWP</li>
+					<li><a href='index.shtml'>Home</a></li>
+					<li><a href='nutshell.shtml'>Nutshell</a></li>
 					<div class='centered' style='z-index: -1;'><h1>Title</h1></div>
 					<li class='dropdown-right'><img class='companylogo' src='img/logo/XORkeyLogo32.png'>
 				</ul>
