Some minor improvements.

--- a/com/xorkey/www/shtml/inc/left.html
+++ b/com/xorkey/www/shtml/inc/left.html
@@ -1,3 +1,3 @@
 				<div id='companygroup'>
-					<div class='companygroup'>XORkey</div>
+					<div class='companygroup'>XORkey B.V.</div>
 				</div>	<!-- #companygroup -->
