--- a/com/xorkey/www/shtml/inc/bottom.html
+++ b/com/xorkey/www/shtml/inc/bottom.html
@@ -9,6 +9,7 @@
 					<table class='quicklinks'>
 					<tr><td>Quick links</td></tr>
 					<tr><td><a href='documents/white-papers/timo.pdf'>TIMO™ protocol (pdf)</a></td></tr>
+					<tr><td><a href='https://patents.google.com/patent/US10177921B2'>US Patent 10.177.921</a></td></tr>
 					</table>
 				</div>
 			</div>  <!-- #siteinfo -->
